src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Accounts__c</fullName>
        <label>Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Biology__c</fullName>
        <label>Biology</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Studies__c</fullName>
        <label>Business Studies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chemistry__c</fullName>
        <label>Chemistry</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eco__c</fullName>
        <label>Eco</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>English__c</fullName>
        <label>English</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>History__c</fullName>
        <label>History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maths__c</fullName>
        <label>Maths</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Education__c</fullName>
        <label>Physical Education</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Ad__c</fullName>
        <label>Public Ad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Punjabi__c</fullName>
        <label>Punjabi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>literature__c</fullName>
        <label>literature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>physics__c</fullName>
        <label>physics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Arts</fullName>
        <active>true</active>
        <label>Arts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Comerce</fullName>
        <active>true</active>
        <description>Please select this for Commerce</description>
        <label>Comerce</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical</fullName>
        <active>true</active>
        <description>This is for medical students</description>
        <label>Medical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Medical</fullName>
        <active>true</active>
        <description>this is for non medical</description>
        <label>Non Medical</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>